data/derived/fa15/progs/unify/prog3354.ml.out
Characters 8-18:
  let _ = mulByDigit -1 [2;3];;
          ^^^^^^^^^^
Error: This expression has type int -> int list -> int list
       but an expression was expected of type int
